--- a/resume/resume.tex
+++ b/resume/resume.tex
@@ -5,6 +5,7 @@
     \usepackage{textcomp}
     \usepackage[utf8]{inputenc}
     \usepackage[T1]{fontenc}
+    \usepackage{hyperref}
     \textheight=10in
     \pagestyle{empty}
     \raggedright
@@ -74,7 +75,7 @@
 \vspace*{-10pt}
 \begin{center}
 	{\Huge \scshape {Osama Albahrani}}\\
-	1910 Entrepreneur Dr, Raleigh, NC 27606$\cdot$ osalbahr@ncsu.edu $\cdot$ (217) 979-1840 $\cdot$ linkedin.com/in/osama-albahrani/\\
+	Raleigh, NC 27606$\cdot$ osalbahr@ncsu.edu $\cdot$ (217) 979-1840 $\cdot$ \href{https://linkedin.com/in/osama-albahrani/}{linkedin.com/in/osama-albahrani}\\
 \end{center}
 
 %==== Education ====%
@@ -86,7 +87,7 @@ BS Computer Science - Minor in Cognitive Science \textit{GPA: 3.714 - Major GPA:
 %==== Skills ====%
 \header{Skills}
 \begin{tabular}{ l l }
-	Programming Languages:                      & C, C++, Java, Python, Assembly                                  \\
+	Programming Languages:                      & C, C++, Java, Python, x86 Assembly                                  \\
 	Development Tools:                      & Git, GitHub, Visual Studio Code, Eclipse, gcc, gdb, Jenkins                                   \\
 	Operating Systems: & MacOS, Linux                   \\
 	Human Languages:                                  & Arabic - Native Speaker, English - Proficient \\
@@ -130,7 +131,7 @@ BS Computer Science - Minor in Cognitive Science \textit{GPA: 3.714 - Major GPA:
 \vspace{-1mm}
 \begin{itemize} \itemsep 1pt
 	\item Met weekly with 14 first-year students to ensure a smooth transition to NC State, both academically and socially, and provided resources as necessary
-	\item Hosted events to provide a sense of community to +200 Summer Start Participants
+	\item Hosted events to provide a sense of community to +200 Summer Start participants
 \end{itemize}
 \textbf{University Housing at NC State} \hfill Raleigh, NC\\
 \textit{Community Assistant} \hfill Jan 2022 - May 2022\\
